tests/ui/parser/recover/recover-enum.stderr
error: expected one of `(`, `,`, `=`, `{`, or `}`, found `Bad`
  --> $DIR/recover-enum.rs:4:9
   |
LL |         Very
   |             - expected one of `(`, `,`, `=`, `{`, or `}`
LL |         Bad(usize)
   |         ^^^ unexpected token
   |
help: missing `,`
   |
LL |         Very,
   |             +

error: expected one of `,`, `=`, or `}`, found `Stuff`
  --> $DIR/recover-enum.rs:6:9
   |
LL |         Bad(usize)
   |                   - expected one of `,`, `=`, or `}`
LL |
LL |         Stuff { a: usize }
   |         ^^^^^ unexpected token
   |
help: missing `,`
   |
LL |         Bad(usize),
   |                   +

error: expected one of `,`, `=`, or `}`, found `Here`
  --> $DIR/recover-enum.rs:8:9
   |
LL |         Stuff { a: usize }
   |                           - expected one of `,`, `=`, or `}`
LL |
LL |         Here
   |         ^^^^ unexpected token
   |
help: missing `,`
   |
LL |         Stuff { a: usize },
   |                           +

error: aborting due to 3 previous errors

